--- a/salvaAuto/index.html
+++ b/salvaAuto/index.html
@@ -1,16 +1,23 @@
-<?php
-	require_once("partial/header.php");
-?>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SalvaAuto</title>
+    <link href="../salvaAuto/index.css" rel="stylesheet" type="text/css">
+</head>
+<body>
 	
 	<div class="container">
 		<nav class="navbar">
-			<ul><li class="swing"><a href="#home" target="_blank">Salva</a></li></ul>
+			<ul><li class="swing"><a href="#home" >Salva</a></li></ul>
 
 			<ul>
-				<li class="swing"><a href="#exterieur" target="_blank">Exterieur</a></li>
-				<li class="swing"><a href="#interieur" target="_blank">Interieur</a></li>
-				<li class="swing"><a href="#complet" target="_blank">Complet</a></li>
-				<li class="swing"><a href="#maintenance" target="_blank">Maintenance</a></li>
+				<li class="swing"><a href="#exterieur" >Exterieur</a></li>
+				<li class="swing"><a href="#interieur" >Interieur</a></li>
+				<li class="swing"><a href="#complet" >Complet</a></li>
+				<li class="swing"><a href="#maintenance" >Maintenance</a></li>
 			</ul>
 
 			<ul><li class="swing"><a href="#other">Autres services</a></li></ul>
@@ -26,17 +33,17 @@
 		</section>
 
 		<section id="exterieur">
-			<h1>About</h1>
+			<h1>EXTERIEUR</h1>
 			<p>Lorem ipsum dolor sit amet.</p>
 		</section>
 
 		<section id="interieur">
-			<h1>Service</h1>
+			<h1>INTERIEUR</h1>
 			<p>Lorem ipsum dolor sit amet.</p>
 		</section>
 
 		<section id="complet">
-			<h1>Contact</h1>
+			<h1>COMPLET</h1>
 			<p>Lorem ipsum dolor sit amet.</p>
 		</section>
 
@@ -52,5 +59,5 @@
 
 	</div>
 
-<?php
-	require_once("partial/footer.php");
+</body>
+</html>
