--- a/salvaAuto/index.html
+++ b/salvaAuto/index.html
@@ -20,10 +20,11 @@
 				<li class="swing"><a href="#maintenance" >Maintenance</a></li>
 			</ul>
 
-			<ul><li class="swing"><a href="#other">Autres services</a></li></ul>
+			<ul><li class="swing"><a href="#other">A Propos</a></li></ul>
 		</nav>
 
 		<section id="home">
+
 			<div class="logoAuto"></div>
 			<div class="dom">Lave Auto à Domicile</div>
 			<div class="btn-container" ><button class="btn">Prenez un rendez-vous</button></div>
@@ -33,27 +34,61 @@
 		</section>
 
 		<section id="exterieur">
-			<h1>EXTERIEUR</h1>
-			<p>Lorem ipsum dolor sit amet.</p>
+			<h1>LAVAGE EXTERIEUR</h1>
+			<p>Berline - 65$ | SUV - 100$ | Camion - 200$ </p>
+			<ul>
+				<li>Nettoyage de la carosserie</li>
+				<li>Cirage de la carosserie</li>
+				<li>Lustration des pneus</li>
+				<li>Lustration des pneus</li>
+				<li>Lustration des pneus</li>
+				<li>Lustration des pneus</li>
+			</ul>
 		</section>
 
 		<section id="interieur">
-			<h1>INTERIEUR</h1>
-			<p>Lorem ipsum dolor sit amet.</p>
+			<h1>LAVAGE INTERIEUR</h1>
+			<p>Berline - 65$ | SUV - 100$ | Camion - 200$ </p>
+			<ul>
+				<li>Nettoyage de la carosserie</li>
+				<li>Cirage de la carosserie</li>
+				<li>Lustration des pneus</li>
+				<li>Lustration des pneus</li>
+				<li>Lustration des pneus</li>
+				<li>Lustration des pneus</li>
+			</ul>			
 		</section>
 
 		<section id="complet">
-			<h1>COMPLET</h1>
-			<p>Lorem ipsum dolor sit amet.</p>
+			<h1>LAVAGE COMPLET</h1>
+			<p>Berline - 65$ | SUV - 100$ | Camion - 200$ </p>
+			<ul>
+				<li>Nettoyage de la carosserie</li>
+				<li>Cirage de la carosserie</li>
+				<li>Lustration des pneus</li>
+				<li>Lustration des pneus</li>
+				<li>Lustration des pneus</li>
+				<li>Lustration des pneus</li>
+			</ul>
+
 		</section>
 
 		<section id="maintenance">
-			<h1>Maintenance</h1>
-			<p>Lorem ipsum dolor sit amet.</p>
+			<h1>MAINTENANCE</h1>
+			<p>Berline - 65$ | SUV - 100$ | Camion - 200$ </p>
+			<ul>
+				<li>Nettoyage de la carosserie</li>
+				<li>Cirage de la carosserie</li>
+				<li>Lustration des pneus</li>
+				<li>Lustration des pneus</li>
+				<li>Lustration des pneus</li>
+				<li>Lustration des pneus</li>
+			</ul>
+
 		</section>
 
 		<section id="other">
-			<h1>Autres Services</h1>
+			<h1>A PROPOS</h1>
 			<p>Lorem ipsum dolor sit amet.</p>
 		</section>
 
